# mts-linkchats-launcher

./: Cargo.toml  LICENSE-MIT  PKGBUILD  README.md
.github/workflows/: rust.yml
contrib/: mts-linkchats-launcher.conf  mts-linkchats-launcher.desktop
src/: apt.rs  args.rs  config.rs  extract.rs  http.rs  lib.rs  main.rs  paths.rs  pkg.rs  progress.rs  state.rs
src/config/: file.rs
