[package]
name = "mts-linkchats-launcher"
version = "0.2.0"
edition = "2024"
description = "Client for MTS LinkChats repository in Rust for Arch Linux"
authors = ["windx-foobar <bezalkogoln1ycoder@gmail.com>"]
license = "MIT"
repository = "https://github.com/windx-foobar/mts-linkchats-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
libflate = "2"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "rustls-tls-native-roots",
] }
serde = { version = "1.0.137", features = ["derive"] }
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
  "signal",
] }
toml = "0.9"
xch = "1.1"
